--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,82 +1,82 @@
 {
-  "title": "Shap10r：一款逻辑推理益智游戏",
-  "description": "通过 Wordle™ 和 Mastermind® 游戏机制的独特结合来挑战您的思维",
-  "playNow": "立即播放",
-  "gameExperience": "在这个引人入胜的益智游戏中，通过揭开隐藏的形状颜色组合来测试您的推理能力！",
-  "startAdventure": "使用Shap10r开始你的解谜之旅：",
-  "playGame": "玩游戏",
-  "fullscreenTip": "点击游戏区域开始游戏。使用全屏按钮可获得更好的体验。",
-  "howToPlay": "Shap10r 如何玩？",
-  "quickGuide": "以下是帮助您入门的快速指南：",
-  "step1Title": "选择您的 Shaplors",
-  "step1Description": "从 24 个选项的网格中选择五种独特的形状颜色组合",
+  "title": "Shap10r: 逻辑推理益智游戏",
+  "description": "体验这款融合了 Wordle™ 和 Mastermind® 玩法的独特益智游戏",
+  "playNow": "立即开始",
+  "gameExperience": "在这款引人入胜的益智游戏中，通过发现隐藏的形状和颜色组合来测试你的推理能力！",
+  "startAdventure": "开始你的 Shap10r 解谜之旅：",
+  "playGame": "开始游戏",
+  "fullscreenTip": "点击游戏区域开始游戏。使用全屏按钮获得更好的体验。",
+  "howToPlay": "如何玩 Shap10r？",
+  "quickGuide": "这是一个快速入门指南：",
+  "step1Title": "选择你的 Shaplors",
+  "step1Description": "从24个选项中选择5个独特的形状-颜色组合",
   "step2Title": "分析反馈",
-  "step2Description": "绿色轮廓表示正确的 Shaplor 位于正确的位置，黄色表示正确的 Shaplor 但位置错误",
-  "step3Title": "使用逻辑",
-  "step3Description": "考虑 Shaplor 值（形状 + 颜色）来推断正确的组合",
-  "step4Title": "解决难题",
-  "step4Description": "使用排除法在 10 次猜测内破解密码",
-  "keyFeatures": "Shap10r的主要特点",
-  "feature1Title": "动态游戏",
-  "feature1Description": "随机分配的形状和颜色值使每个游戏都独一无二",
+  "step2Description": "绿色轮廓表示正确的 Shaplor 在正确的位置，黄色表示正确的 Shaplor 但位置错误",
+  "step3Title": "运用逻辑",
+  "step3Description": "考虑 Shaplor 值（形状+颜色）来推理正确的组合",
+  "step4Title": "解开谜题",
+  "step4Description": "在10次猜测内通过排除法破解密码",
+  "keyFeatures": "Shap10r 的主要特点",
+  "feature1Title": "动态游戏玩法",
+  "feature1Description": "随机分配的形状和颜色值使每局游戏都独一无二",
   "feature2Title": "难度模式",
-  "feature2Description": "在普通模式（排序值）和困难模式（未分类值）之间选择",
-  "feature3Title": "策略得分",
-  "feature3Description": "正确放置可获得积分，快速解决问题可获得奖励积分",
-  "feature4Title": "直观的界面",
+  "feature2Description": "在普通模式（排序值）和困难模式（未排序值）之间选择",
+  "feature3Title": "策略性计分",
+  "feature3Description": "正确放置获得分数，快速解决获得额外奖励分",
+  "feature4Title": "直观界面",
   "feature4Description": "清晰的视觉反馈和用户友好的控制",
-  "whyPlay": "为什么要玩Shap10r？",
-  "reason1": "通过有趣的游戏提高批判性思维和模式识别能力",
-  "reason2": "免费玩，可在所有设备上使用，无需下载",
-  "reason3": "非常适合喜欢逻辑挑战的各年龄段的拼图爱好者",
+  "whyPlay": "为什么要玩 Shap10r？",
+  "reason1": "通过引人入胜的游戏玩法提升批判性思维和模式识别能力",
+  "reason2": "免费游玩，无需下载，支持所有设备",
+  "reason3": "适合所有年龄段喜欢逻辑挑战的益智游戏爱好者",
   "faq": "常见问题：",
-  "faq1Question": "什么是Shap10r？",
-  "faq1Answer": "Shap10r 是一款具有挑战性的益智游戏，它结合了 Wordle™ 和 Mastermind® 的元素，玩家使用逻辑来发现隐藏的形状颜色组合。",
-  "faq2Question": "我需要安装任何东西来玩Shap10r 吗？",
-  "faq2Answer": "不是，Shap10r 直接在您的网络浏览器中运行，并且完全免费。",
-  "faq3Question": "我可以在移动设备上玩Shap10r吗？",
-  "faq3Answer": "是的，Shap10r 针对移动设备进行了全面优化，可以在任何现代网络浏览器上播放。",
-  "faq4Question": "Shap10r 有何独特之处？",
-  "faq4Answer": "Shap10r 具有动态值分配、多种难度模式的特点，并将视觉模式识别与数值策略相结合。",
-  "seoTitle": "Shap10r：一款逻辑推理益智游戏",
-  "seoDescription": "在免费的益智游戏体验中，通过 Wordle™ 和 Mastermind® 游戏机制的独特融合来挑战您的思维！",
-  "siteUrl": "https://www.playshaplor.com/",
-  "keywords": "Shap10r、益智游戏、逻辑游戏、推理游戏、Wordle、Mastermind、大脑训练、策略游戏",
-  "clickToRate": "评价",
-  "ratingStars": "星星",
-  "averageRating": "平均的",
-  "totalVotes": "投票",
+  "faq1Question": "什么是 Shap10r？",
+  "faq1Answer": "Shap10r 是一款具有挑战性的益智游戏，结合了 Wordle™ 和 Mastermind® 的元素，玩家需要使用逻辑来发现隐藏的形状-颜色组合。",
+  "faq2Question": "玩 Shap10r 需要安装什么吗？",
+  "faq2Answer": "不需要，Shap10r 直接在网页浏览器中运行，完全免费。",
+  "faq3Question": "可以在移动设备上玩 Shap10r 吗？",
+  "faq3Answer": "是的，Shap10r 已完全针对移动设备进行优化，可以在任何现代网页浏览器中玩。",
+  "faq4Question": "Shap10r 有什么独特之处？",
+  "faq4Answer": "Shap10r 具有动态值分配、多种难度模式，并将视觉模式识别与数字策略相结合。",
+  "seoTitle": "Shap10r: 逻辑推理益智游戏",
+  "seoDescription": "在这款免费益智游戏中，体验融合了 Wordle™ 和 Mastermind® 玩法的独特挑战！",
+  "siteUrl": "https://www.playshap10r.org/",
+  "keywords": "Shap10r, 益智游戏, 逻辑游戏, 推理游戏, Wordle, Mastermind, 脑力训练, 策略游戏",
+  "clickToRate": "评分",
+  "ratingStars": "星",
+  "averageRating": "平均",
+  "totalVotes": "票数",
   "meta": {
-    "ogTitle": "Shap10r：一款逻辑推理益智游戏",
-    "ogDescription": "通过 Wordle™ 和 Mastermind® 游戏机制的独特结合来挑战您的思维",
-    "ogType": "网站",
-    "ogUrl": "https://www.playshaplor.com/",
-    "ogImage": "https://www.playshaplor.com/discover.svg",
-    "twitterCard": "摘要大图",
-    "twitterTitle": "Shap10r：一款逻辑推理益智游戏",
-    "twitterDescription": "通过 Wordle™ 和 Mastermind® 游戏机制的独特结合来挑战您的思维",
-    "twitterImage": "https://www.playshaplor.com/discover.svg"
+    "ogTitle": "Shap10r: 逻辑推理益智游戏",
+    "ogDescription": "体验这款融合了 Wordle™ 和 Mastermind® 玩法的独特益智游戏",
+    "ogType": "website",
+    "ogUrl": "https://www.playshap10r.org/",
+    "ogImage": "https://www.playshap10r.org/discover.svg",
+    "twitterCard": "summary_large_image",
+    "twitterTitle": "Shap10r: 逻辑推理益智游戏",
+    "twitterDescription": "体验这款融合了 Wordle™ 和 Mastermind® 玩法的独特益智游戏",
+    "twitterImage": "https://www.playshap10r.org/discover.svg"
   },
   "seo": {
-    "robots": "索引，关注",
-    "canonical": "https://www.playshaplor.com/",
+    "robots": "index, follow",
+    "canonical": "https://www.playshap10r.org/",
     "googleSiteVerification": "gp8OOTgtImSxvl5BNocZiHeMKwXw5QP6e7SaeCVQjEQ",
     "googleAnalyticsId": "G-1NVXP8SB8Z"
   },
   "layout": {
-    "language": "英文",
-    "direction": "升",
-    "fontFamily": "国际米兰"
+    "language": "zh",
+    "direction": "ltr",
+    "fontFamily": "Inter"
   },
   "games": {},
   "game": {
-    "playNow": "立即播放",
-    "fullscreenTip": "按 F11 或单击全屏按钮以获得最佳体验",
-    "loading": "正在加载游戏...",
-    "relatedGames": "更多类似游戏",
+    "playNow": "立即开始",
+    "fullscreenTip": "按 F11 或点击全屏按钮获得最佳体验",
+    "loading": "加载游戏中...",
+    "relatedGames": "类似游戏",
     "features": "主要特点",
-    "about": "关于这款游戏",
-    "howToPlay": "怎么玩",
+    "about": "关于游戏",
+    "howToPlay": "玩法说明",
     "share": "分享",
     "report": "报告问题",
     "feedback": "提供反馈"
@@ -88,8 +88,8 @@
     },
     "game": {
       "title": "玩 SHAP10R 游戏",
-      "description": "Shap10r 结合了 Wordle™ 和 Mastermind® 的游戏机制。匹配五个带有正确数值的 Shaplor。",
-      "score": "得分",
+      "description": "Shap10r 结合了 Wordle™ 和 Mastermind® 的玩法。匹配五个具有正确值的 Shaplors。",
+      "score": "分数",
       "highScore": "最高",
       "time": "时间",
       "bestTime": "最佳",
@@ -98,7 +98,7 @@
       "delete": "删除",
       "enter": "确认",
       "congratulations": "恭喜！",
-      "solvedPuzzle": "你用了 {tries} 次就解开了谜题！",
+      "solvedPuzzle": "你用了 {tries} 次尝试解开了谜题！",
       "finalScore": "最终得分：{score}",
       "newHighScore": "新的最高分！",
       "newGame": "再玩一次",
@@ -109,28 +109,28 @@
     "categories": {
       "classic": "经典系列",
       "themed": "主题版本",
-      "experimental": "实验",
+      "experimental": "实验性",
       "seasonal": "季节性",
-      "crossover": "交叉"
+      "crossover": "联动"
     },
     "features": {
       "multiplayer": "多人游戏",
       "achievements": "成就",
       "leaderboards": "排行榜",
-      "customization": "定制"
+      "customization": "自定义"
     },
     "errors": {
       "loadFailed": "游戏加载失败",
-      "saveFailed": "无法保存进度",
-      "connectionLost": "连接丢失",
+      "saveFailed": "保存进度失败",
+      "connectionLost": "连接断开",
       "loading": "加载中...",
-      "waitforloading": "等一下...",
+      "waitforloading": "请稍等一分钟...",
       "gameNotFound": "未找到游戏",
-      "gameNotFoundDesc": "抱歉，我们找不到您要找的游戏。"
+      "gameNotFoundDesc": "抱歉，我们找不到你要找的游戏。"
     },
     "buttons": {
-      "play": "立即播放",
-      "retry": "再试一次",
+      "play": "立即开始",
+      "retry": "重试",
       "settings": "设置",
       "share": "分享",
       "fullscreen": "全屏"
