--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,7 +11,7 @@
   "step1Title": "Выберите ваши Шаплоры",
   "step1Description": "Выберите пять уникальных комбинаций формы и цвета из сетки из 24 вариантов.",
   "step2Title": "Анализируйте обратную связь",
-  "step2Description": "Зеленые контуры показывают правильные Шаплоры в правильном положении, желтые контуры указывают на правильные Шаплоры, но в неправильном положении.",
+  "step2Description": "Зеленые контуры показывают правильные Шаплоры в правильном положении, желтые контуры указывают на правильные Шаплоры, но неправильное положение.",
   "step3Title": "Используйте логику",
   "step3Description": "Рассмотрите значения Шаплора (форма + цвет), чтобы вывести правильные комбинации.",
   "step4Title": "Решить головоломку",
@@ -37,7 +37,7 @@
   "faq3Question": "Могу ли я играть в Shap10r на мобильных устройствах?",
   "faq3Answer": "Да, Shap10r полностью оптимизирован для мобильных устройств и воспроизводится в любом современном веб-браузере.",
   "faq4Question": "Что делает Shap10r уникальным?",
-  "faq4Answer": "Shap10r имеет динамическое назначение значений, несколько режимов сложности и сочетает визуальное распознавание образов с числовой стратегией.",
+  "faq4Answer": "Shap10r предлагает динамическое назначение значений, несколько режимов сложности и сочетает визуальное распознавание образов с числовой стратегией.",
   "seoTitle": "Shap10r: Логическая и дедукционная игра-головоломка",
   "seoDescription": "Испытайте свой ум с помощью уникального сочетания игровых механик Wordle™ и Mastermind® в бесплатной игре-головоломке!",
   "siteUrl": "https://www.playshaplor.com/",
@@ -59,9 +59,9 @@
   },
   "seo": {
     "robots": "индекс, следовать",
-    "canonical": "https://www.playshaplor.com/",
-    "googleSiteVerification": "gp8OOTgtImSxvl5BNocZiHeMKwXw5QP6e7SaeCVQjEQ",
-    "googleAnalyticsId": "G-1NVXP8SB8Z"
+    "canonical": "https://www.playshap10r.org/",
+    "googleSiteVerification": "ejTNzps4rUJKSZrNs1b57sjcCQU5MdlsNxUCvhIgJuU",
+    "googleAnalyticsId": "G-5Q3KHWXNED"
   },
   "layout": {
     "language": "ru",
@@ -71,7 +71,7 @@
   "games": {},
   "game": {
     "playNow": "Играть сейчас",
-    "fullscreenTip": "Нажмите F11 или кнопку полноэкранного режима для наилучшего восприятия",
+    "fullscreenTip": "Нажмите F11 или кнопку полноэкранного режима для наилучшего просмотра",
     "loading": "Загрузка игры...",
     "relatedGames": "Больше игр, похожих на эту",
     "features": "Основные характеристики",
@@ -85,6 +85,26 @@
     "difficulty": {
       "easy": "Нормальный режим",
       "medium": "Сложный режим"
+    },
+    "game": {
+      "title": "Играть в ИГРУ SHAP10R",
+      "description": "Shap10r сочетает механики Wordle™ и Mastermind®. Сопоставьте пять Shaplors с правильными значениями.",
+      "score": "Счет",
+      "highScore": "ВЫСОКИЙ",
+      "time": "Время",
+      "bestTime": "ЛУЧШИЙ",
+      "hideTimer": "Скрыть таймер",
+      "showTimer": "Показать таймер",
+      "delete": "Удалить",
+      "enter": "Входить",
+      "congratulations": "Поздравляю!",
+      "solvedPuzzle": "Вы решили головоломку за {tries} попыток!",
+      "finalScore": "Окончательный счет: {счет}",
+      "newHighScore": "Новый рекорд!",
+      "newGame": "Играть снова",
+      "hardMode": "Сложный режим",
+      "normalMode": "Нормальный режим",
+      "tryMode": "Попробуйте {mode} режим"
     },
     "categories": {
       "classic": "Классическая серия",
