--- a/src/locales/zh-cn.json
+++ b/src/locales/zh-cn.json
@@ -61,7 +61,7 @@
     "robots": "索引，关注",
     "canonical": "https://www.playshaplor.com/",
     "googleSiteVerification": "gp8OOTgtImSxvl5BNocZiHeMKwXw5QP6e7SaeCVQjEQ",
-    "googleAnalyticsId": "G-1NVXP8SB8Z"
+    "googleAnalyticsId": "G-LQ3Y7K64BY"
   },
   "layout": {
     "language": "英文",
