--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -61,7 +61,7 @@
     "robots": "индекс, следовать",
     "canonical": "https://www.playshap10r.org/",
     "googleSiteVerification": "ejTNzps4rUJKSZrNs1b57sjcCQU5MdlsNxUCvhIgJuU",
-    "googleAnalyticsId": "G-5Q3KHWXNED"
+    "googleAnalyticsId": "G-LQ3Y7K64BY"
   },
   "layout": {
     "language": "ru",
