--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -61,7 +61,7 @@
     "robots": "索引，关注",
     "canonical": "https://www.playshap10r.org/",
     "googleSiteVerification": "ejTNzps4rUJKSZrNS1b57sjcCQU5MdlsNxUCvhIgJuU",
-    "googleAnalyticsId": "G-5Q3KHWXNED"
+    "googleAnalyticsId": "G-LQ3Y7K64BY"
   },
   "layout": {
     "language": "英文",
